--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,11 @@
       "request": "launch",
       "program": "${workspaceFolder}/main.py",
       "cwd": "${workspaceFolder}",
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",
+      "args": [
+        "--host", "localhost"
+        ,"--port", "23409"
+      ],
     },
     {
       "name": "Debug Unit Tests",
