--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,18 @@
       "name": "Run gui",
       "type": "debugpy",
       "request": "launch",
+      "program": "${workspaceFolder}/main_old.py",
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "args": [
+        "--host", "localhost"
+        ,"--port", "23409"
+      ],
+    },
+    {
+      "name": "PyQt",
+      "type": "debugpy",
+      "request": "launch",
       "program": "${workspaceFolder}/main.py",
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
@@ -30,6 +42,7 @@
         ,"--port", "23409"
       ],
     },
+
     {
       "name": "Debug Unit Tests",
       "type": "debugpy",
