--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,44 +12,16 @@
       "console": "integratedTerminal"
     },
     {
-      "name": "TrackManager",
-      "type": "debugpy",
-      "request": "launch",
-      "program": "${workspaceFolder}/TrackManager.py",
-      "console": "integratedTerminal"
-    },
-    {
-      "name": "Run gui",
-      "type": "debugpy",
-      "request": "launch",
-      "program": "${workspaceFolder}/main_old.py",
-      "cwd": "${workspaceFolder}",
-      "console": "integratedTerminal",
-      "args": [
-        "--host", "localhost"
-        ,"--port", "23409"
-      ],
-    },
-    {
       "name": "PyQt",
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/main.py",
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
+      "justMyCode": true,
       "args": [
         "--host", "localhost"
         ,"--port", "23409"
-      ],
-    },
-
-    {
-      "name": "Debug Unit Tests",
-      "type": "debugpy",
-      "request": "launch",
-      "module": "pytest",
-      "args": [
-        "tests"
       ],
     },
   ]
